--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.12",
+    "@types/comma-number": "^2.1.0",
     "@types/hh-mm-ss": "^1.2.1",
     "@types/react-icons": "^3.0.0",
     "@types/react-infinite-scroller": "^1.2.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "comma-number": "^2.1.0",
     "hh-mm-ss": "^1.2.0",
     "iso8601-duration": "^2.1.1",
     "javascript-time-ago": "^2.5.9",
