--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-infinite-scroller": "^1.2.6",
+    "react-loader-spinner": "^5.3.4",
     "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.12.1",
     "swiper": "^9.3.2",
